Starting on getting the i2c lcd code working.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ set(CMAKE_C_STANDARD 11)
 pico_sdk_init()
 
 add_subdirectory(blink)
-add_subdirectory(breadboard-hello)
+add_subdirectory(breadboard_hello)
 add_subdirectory(button)
+add_subdirectory(lcd_1602_i2c)
