Add i2c LCD library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(blink)
 add_subdirectory(breadboard_hello)
 add_subdirectory(button)
 add_subdirectory(lcd_1602_i2c)
+add_subdirectory(lib)
