--- a/lcd_1602_i2c/CMakeLists.txt
+++ b/lcd_1602_i2c/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(lcd_1602_i2c lcd_1602_i2c.c)
 
-target_link_libraries(lcd_1602_i2c pico_stdlib hardware_i2c)
+target_link_libraries(lcd_1602_i2c pico_stdlib hardware_i2c i2c_lcd)
 
 pico_add_extra_outputs(lcd_1602_i2c)
