--- a/blink/CMakeLists.txt
+++ b/blink/CMakeLists.txt
@@ -3,3 +3,6 @@ add_executable(blink blink.c)
 target_link_libraries(blink pico_stdlib)
 
 pico_add_extra_outputs(blink)
+
+pico_enable_stdio_usb(blink 1)
+pico_enable_stdio_uart(blink 0)
